[package]
name = "dgg-voting"
version = "0.1.0"
authors = ["Deen17"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = {version = "0.12.0", features = ["tls"]}
tokio             = {version = "0.3.5", features = ["full"]}
log = "0.4.11"
http = "0.2.1"
tokio-native-tls = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.60"
serde_derive = "1.0"
futures-util = "0.3.8"
